Normalized HTTP status codes
