# nummus/web/common.py
@@ -7,7 +7,7 @@ import datetime
 import mimetypes
 import uuid
 
-import connexion
+from connexion.exceptions import ProblemException as HTTPError
 import flask
 from sqlalchemy import orm
 from thefuzz import process
@@ -33,15 +33,15 @@ def find_account(s: orm.Session, query: str) -> Account:
     Account
 
   Raises:
-    BadRequestProblem if UUID is malformed
-    ProblemException if Account is not found
+    HTTPError(400) if UUID is malformed
+    HTTPError(404) if Account is not found
   """
   # Clean
   account_uuid = str(parse_uuid(query))
   a = s.query(Account).where(Account.uuid == account_uuid).first()
   if a is None:
-    raise connexion.exceptions.ProblemException(
-        status=404, detail=f"Account {account_uuid} not found in Portfolio")
+    raise HTTPError(404,
+                    detail=f"Account {account_uuid} not found in Portfolio")
   return a
 
 
@@ -56,15 +56,14 @@ def find_asset(s: orm.Session, query: str) -> Asset:
     Asset
 
   Raises:
-    BadRequestProblem if UUID is malformed
-    ProblemException if Asset is not found
+    HTTPError(400) if UUID is malformed
+    HTTPError(404) if Asset is not found
   """
   # Clean
   asset_uuid = str(parse_uuid(query))
   a = s.query(Asset).where(Asset.uuid == asset_uuid).first()
   if a is None:
-    raise connexion.exceptions.ProblemException(
-        status=404, detail=f"Asset {asset_uuid} not found in Portfolio")
+    raise HTTPError(404, detail=f"Asset {asset_uuid} not found in Portfolio")
   return a
 
 
@@ -79,15 +78,14 @@ def find_budget(s: orm.Session, query: str) -> Budget:
     Budget
 
   Raises:
-    BadRequestProblem if UUID is malformed
-    ProblemException if Budget is not found
+    HTTPError(400) if UUID is malformed
+    HTTPError(404) if Budget is not found
   """
   # Clean
   asset_uuid = str(parse_uuid(query))
   a = s.query(Budget).where(Budget.uuid == asset_uuid).first()
   if a is None:
-    raise connexion.exceptions.ProblemException(
-        status=404, detail=f"Budget {asset_uuid} not found in Portfolio")
+    raise HTTPError(404, detail=f"Budget {asset_uuid} not found in Portfolio")
   return a
 
 
@@ -102,16 +100,16 @@ def find_transaction(s: orm.Session, query: str) -> Transaction:
     Transaction
 
   Raises:
-    BadRequestProblem if UUID is malformed
-    ProblemException if Transaction is not found
+    HTTPError(400) if UUID is malformed
+    HTTPError(404) if Transaction is not found
   """
   # Clean
   transaction_uuid = str(parse_uuid(query))
   t = s.query(Transaction).where(Transaction.uuid == transaction_uuid).first()
   if t is None:
-    raise connexion.exceptions.ProblemException(
-        status=404,
-        detail=f"Transaction{transaction_uuid} not found in Portfolio")
+    raise HTTPError(404,
+                    detail=f"Transaction{transaction_uuid} not "
+                    "found in Portfolio")
   return t
 
 
@@ -125,15 +123,14 @@ def parse_uuid(s: str) -> uuid.UUID:
     Parsed UUID
 
   Raises:
-    BadRequestProblem if UUID is malformed
+    HTTPError(400) if UUID is malformed
   """
   if isinstance(s, uuid.UUID) or s is None:
     return s
   try:
     return uuid.UUID(s)
   except ValueError as e:
-    raise connexion.exceptions.BadRequestProblem(
-        detail=f"Badly formed UUID: {s}, {e}") from e
+    raise HTTPError(400, detail=f"Badly formed UUID: {s}, {e}") from e
 
 
 def parse_date(s: str) -> datetime.date:
@@ -146,15 +143,14 @@ def parse_date(s: str) -> datetime.date:
     Parsed date
 
   Raises:
-    BadRequestProblem if date is malformed
+    HTTPError(400) if date is malformed
   """
   if isinstance(s, datetime.date) or s is None:
     return s
   try:
     return datetime.date.fromisoformat(s)
   except ValueError as e:
-    raise connexion.exceptions.BadRequestProblem(
-        detail=f"Badly formed date: {s}, {e}") from e
+    raise HTTPError(400, detail=f"Badly formed date: {s}, {e}") from e
 
 
 def parse_enum(s: str, cls: Type[BaseEnum]) -> BaseEnum:
@@ -167,15 +163,14 @@ def parse_enum(s: str, cls: Type[BaseEnum]) -> BaseEnum:
     Parsed enum
 
   Raises:
-    BadRequestProblem if enum is unknown
+    HTTPError(400) if enum is unknown
   """
   if isinstance(s, cls) or s is None:
     return s
   try:
     return cls.parse(s)
   except ValueError as e:
-    raise connexion.exceptions.BadRequestProblem(
-        detail=f"Unknown {cls.__name__}: {s}, {e}") from e
+    raise HTTPError(400, detail=f"Unknown {cls.__name__}: {s}, {e}") from e
 
 
 def search(s: orm.Session, query: orm.Query[Base], cls: Type[Base],
@@ -258,30 +253,26 @@ def validate_image_upload(req: flask.Request) -> str:
     Suffix of image based on content-type
 
   Raises:
-    400: Missing headers
-    411: Length required
-    413: Length > 1MB
-    415: Unsupported image type
+    HTTPError(411): Missing Content-Length
+    HTTPError(413): Length > 1MB
+    HTTPError(415): Unsupported image type
+    HTTPError(422): Missing Content-Type
   """
-  if req.content_type is None:
-    raise connexion.exceptions.ProblemException(
-        detail="Request missing Content-Type")
-
   if req.content_length is None:
-    raise connexion.exceptions.ProblemException(
-        detail="Request missing Content-Length")
+    raise HTTPError(411, detail="Request missing Content-Length")
+
+  if req.content_type is None:
+    raise HTTPError(422, detail="Request missing Content-Type")
 
   if not req.content_type.startswith("image/"):
-    raise connexion.exceptions.UnsupportedMediaTypeProblem(
-        detail=f"Content-type must be image/*: {req.content_type}")
+    raise HTTPError(415,
+                    detail=f"Content-type must be image/*: {req.content_type}")
 
   suffix = mimetypes.guess_extension(req.content_type)
   if suffix is None:
-    raise connexion.exceptions.UnsupportedMediaTypeProblem(
-        detail=f"Unsupported image type: {req.content_type}")
+    raise HTTPError(415, detail=f"Unsupported image type: {req.content_type}")
 
   if req.content_length > 1e6:
-    raise connexion.exceptions.ProblemException(
-        status=413, detail=f"Payload length > 1MB: {req.content_length}B")
+    raise HTTPError(413, detail=f"Payload length > 1MB: {req.content_length}B")
 
   return suffix
